<package format="2">
  <name>json_catkin</name>
  <version>3.7.0</version>
  <description>json_catkin</description>
  <maintainer email="blumh@ethz.ch">Hermann Blum</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
